<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group />
    <item android:title="Current game">
        <menu>
            <item
                android:id="@+id/nav_switchgame"
                android:icon="@android:drawable/stat_sys_warning"
                android:title="@string/menu_switchgame" />
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_ratings"
            android:icon="@drawable/star"
            android:title="@string/menu_ratings" />
        <item
            android:id="@+id/nav_reviews"
            android:icon="@drawable/review"
            android:title="@string/menu_reviews" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings3"
            android:title="@string/menu_settings" />
    </group>

</menu>
